redo homepage and titles

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,12 +7,12 @@
 			name="viewport"
 			content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi"
 		/>
-		<meta name="description" content="AUT Games" />
-		<meta property="og:title" content="AUT Games" />
+		<meta name="description" content="AHCI - Sign-Up Study" />
+		<meta property="og:title" content="AHCI - Sign-Up Study" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="/" />
 		<meta property="og:image" content="%PUBLIC_URL%/img/game.jpg" />
-		<meta property="og:description" content="Play games now!" />
+		<meta property="og:description" content="Delaware - Semester 1 2021" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<link rel="shortcut icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
@@ -36,7 +36,7 @@
 			href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
-		<title>AUT Games</title>
+		<title>AHCI - Sign-Up Study</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
